Test/git-issues/git-issue-748a.dfy.expect
git-issue-748a.dfy(17,9): Error: Undeclared top-level type or type parameter: array0 (did you forget to qualify a name or declare a module import 'opened'?)
git-issue-748a.dfy(18,9): Error: Undeclared top-level type or type parameter: array1 (did you forget to qualify a name or declare a module import 'opened'?)
git-issue-748a.dfy(19,9): Error: Undeclared top-level type or type parameter: array1? (did you forget to qualify a name or declare a module import 'opened'?)
3 resolution/type errors detected in git-issue-748a.dfy
